[build-system]
requires = ["scikit-build-core", "numpy", "f90wrap"]
build-backend = "scikit_build_core.build"

[project]
name = "pysimple"
version = "1.2.0"
dependencies = ["numpy", "f90wrap"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.scikit-build]
build.verbose = true
build-dir = "_skbuild"
wheel.packages = ["python/pysimple"]
wheel.exclude = ["**/__pycache__/**", "**/*.pyc"]
sdist.include = ["python/pysimple/data/*.dat"]
